--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.7.1",
     "core-js": "^2.4.1",
+    "ng2-charts": "^1.6.0",
     "ng2-ckeditor": "^1.1.13",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "rxjs": "^5.5.2",
